# nocturne-gallery

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 00-安装指南.md  DESIGN.md  Gega Gallery.html  Gega_Gallery_standalone_src.html  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TESTING.md  PRIVACY.md  README_PERFORMANCE.md  TAURI_COMMANDS.md  THUMBNAIL_UPGRADE_SPEC.md  code.html  gega_inspector_topbar.html  gega_inspector_topbar_v2.html  gega_inspector_winctrl_v3.html  launch-copy.md  library-folder-migration.md
e2e/: smoke.spec.ts
scripts/: audit-tauri-commands.js  check_micro_status.py  clean-old-builds.sh  fix-thumbnail-paths-gega.sh  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  models.rs
src-tauri/src/commands/: ai_chat.rs  ai_tools.rs  attachments.rs  backfill.rs  bookmarks.rs  destructive.rs  diagnostics.rs  drag.rs  filesystem.rs  import_export.rs  library.rs  media.rs  mod.rs  path_safety.rs  platform.rs  preferences.rs  state.rs  thumbnails.rs  trash.rs
src-tauri/src/db/: crud.rs  mod.rs
src-tauri/src/media/: design_source.rs  hash.rs  library_folder.rs  library_relocate.rs  library_sync.rs  media_bundle.rs  mod.rs  os_preview.rs  path_util.rs  scanner.rs  thumbnail.rs  thumbnail_queue.rs  trash_reconcile.rs  watcher.rs
(+82 files in other folders)
