[package]
name = "nocturne-gallery"
version = "0.1.0"
edition = "2021"

[lib]
name = "nocturne_gallery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
anyhow = "1"
once_cell = "1"
notify = "6"
open = "5"
arboard = "3"
base64 = "0.22"
sha2 = "0.10"
log = "0.4"
rayon = "1"
webp = { version = "0.3", features = ["image"] }
fast-thumbhash = "0.1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
drag = "2.1"
unicode-normalization = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_UI_Shell"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
